@@ -2,8 +2,8 @@
 \alias{asExprSet}
 \title{Convert pcaRes object to an expression set}
 \description{
-  This function can be used to conveniently replace the 'exprs' slot in
-  an \code{exprSet} with the completed data from a \code{pcaRes} object.
+  This function can be used to conveniently replace the expression matrix in
+  an \code{ExpressionSet} with the completed data from a \code{pcaRes} object.
 }
 \usage{
 asExprSet(object, exprSet)
@@ -11,15 +11,15 @@ asExprSet(object, exprSet)
 \arguments{
   \item{object}{\code{pcaRes} -- The object containing the completed
     data.}
-  \item{exprSet}{\code{exprSet} -- The object passed on to \code{pca}
+  \item{exprSet}{\code{ExpressionSet} -- The object passed on to \code{pca}
     for missing value estimation.}
 }
 \value{
-  An object without missing values of class \code{exprSet}
+  An object without missing values of class \code{ExpressionSet}.
 }
 \details{
   This is not a standard \code{as} function as \code{pcaRes} object
-  alone not can be converted to an \code{exprSet} (the \code{pcaRes}
+  alone not can be converted to an \code{ExpressionSet} (the \code{pcaRes}
   object does not hold any \code{phenoData} for example).
 }
 \author{Wolfram Stacklies \cr 
