@@ -6,9 +6,9 @@
 neighbour clustering. Currently llsImpute only.}
 \usage{nni(object, method=c("llsImpute"), subset=numeric(),...)}
 \arguments{
-  \item{object}{Numerical matrix  with (or an object coercible to such) with
-    samples in rows and variables as columns. Also takes \code{exprSet} in
-    which case the transposed \code{exprs} slot is used.}
+  \item{object}{Numerical matrix with (or an object coercible to such) with
+    samples in rows and variables as columns. Also takes \code{ExpressionSet} in
+    which case the transposed expression matrix is used.}
   \item{subset}{For convenience one can pass a large matrix but only
     use the variable specified as subset. Can be colnames or indices.}
   \item{method}{Currently "llsImpute" only.}
@@ -21,7 +21,7 @@ neighbour clustering. Currently llsImpute only.}
 
 \value{
   A \code{clusterRes} object. Or a list containing a clusterRes object as first and an
-  exprSet object as second entry if the input was of type exprSet.
+  ExpressionSet object as second entry if the input was of type ExpressionSet.
 }
 \author{Wolfram Stacklies}
 \seealso{ \code{\link{llsImpute}}, \code{\link{pca}}}
