@@ -1,3 +1,4 @@
+02/27/08 - Replaced usage of exprSet class with ExpressionSet
 04/10/07 - Added robustSVD, a SVD implementation robust to outliers
 01/02/07 - Added a Non-linear PCA algorithm.
 12/11/06 - kEstimate interface has changed. Instead of specifying a
